--- a/index.html
+++ b/index.html
@@ -37,4 +37,9 @@
         <li><a href="https://apps.apple.com/vn/app/id123456789">Tải trên iOS</a></li>
     </ul>
 </body>
+<script>
+       import { inject } from '@vercel/analytics';
+    inject();
+</script>
+<script defer src="/_vercel/insights/script.js"></script>
 </html>
