--- a/index.html
+++ b/index.html
@@ -41,5 +41,8 @@
        import { inject } from '@vercel/analytics';
     inject();
 </script>
+<script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+</script>
 <script defer src="/_vercel/insights/script.js"></script>
 </html>
